@@ -9,6 +9,10 @@ use RPi::Const qw(:all);
 
 my $shm_key = @ARGV && $ARGV[0] ? $ARGV[0] : 'rpiw';
 
+if (! RPi::WiringPi->meta_key_check($shm_key)){
+    die "shared memory segment with key '$shm_key' doesn't exist. Can't continue...\n";
+}
+
 my $pi = RPi::WiringPi->new(
     label => 'pimeta',
     shm_key => $shm_key,
