@@ -22,6 +22,8 @@ Revision history for Perl extension RPi::WiringPi.
           config section) (closes #158)
         - added meta_key_check() class method in Meta, to check whether a shared
           memory segment exists or not
+        - pimeta and pimetaerase scripts now croak if the shared memory segment
+          we're trying to work on don't yet exist (fixes #156)
 
 2.3633_02 2019-09-21
         - TRIAL RELEASE: may not install properly, and there's a potential for
